# AdventOfCode2020

./: .gitignore  CMakeLists.txt  README.md  aoc2020.cpp
day1/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day10/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day11/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day12/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h  shipstate.cpp  shipstate.h  shipstate_2.cpp  shipstate_2.h
day13/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day14/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day15/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day16/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day17/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day2/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day3/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day4/: CMakeLists.txt  part1.cpp  passport.h  reader.h
day5/: CMakeLists.txt  part2.cpp
day6/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day7/: CMakeLists.txt  input.txt  part1.cpp  part2.cpp  reader.h
day8/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
day9/: CMakeLists.txt  part1.cpp  part2.cpp  reader.h
